<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddStoryActivity">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/story_photo"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/take_picture"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/take_photo"
        app:layout_constraintEnd_toStartOf="@+id/from_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_preview" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:text="@string/upload_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/from_gallery"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/from_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_preview" />

    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/insert_desc_edittext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/desc_upload_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_picture" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/location_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/location_toggle"
        app:layout_constraintTop_toBottomOf="@+id/edt_desc"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>